# chipotle_stores

./: .gitignore  main.py  pyproject.toml  requirements.txt
.deta/: prog_info  state
